# ocx-rs

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  ocx.json  opencode.json
assets/nix/: Dockerfile.nix-daemon  Dockerfile.nix-dev  entrypoint.sh
src/: lib.rs  main.rs
src/commands/: build.rs  cli.rs  config.rs  mod.rs  nix.rs  nix_daemon.rs  opencode.rs  port.rs
src/config/: loader.rs  mod.rs  schema.rs
src/dev/: build.rs  container_name.rs  env_file.rs  env_passthrough.rs  image.rs  mod.rs  opencode_cmd.rs  port.rs  run.rs  shadow_mounts.rs  shell.rs  utils.rs  volumes.rs  workspace.rs
src/docker/: args.rs  client.rs  image_hash.rs  mod.rs
src/nix/: config.rs  daemon.rs  dev.rs  dev_image.rs  docker.rs  docker_cli.rs  extra_dirs.rs  image.rs  mod.rs
src/nix_daemon/: config.rs  daemon.rs  image.rs  mod.rs
src/opencode/: config_dir.rs  mod.rs
src/opencode/version/: cache.rs  github.rs  mod.rs  resolver.rs
src/shadow_mounts/: mod.rs
src/user/: mod.rs
src/version/: cache.rs  mod.rs  resolver.rs
src/workspace/: mod.rs
tests/: cli_test.rs  config_test.rs
