[package]
description = "ocx - a secure Docker wrapper for OpenCode"
authors = ["palekiwi"]
name = "ocx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
figment = { version = "0.10.19", features = ["json", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
whoami = "2.1.1"
