[package]
description = "ocx - a secure Docker wrapper for OpenCode"
authors = ["palekiwi"]
name = "ocx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crc = "3.4.0"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["json", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
hex = "0.4.3"
tempfile = "3.10.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
